Bug 69038 - Incorrect size integer passed to ldap_set_option when setting SSF_MIN
Summary: Incorrect size integer passed to ldap_set_option when setting SSF_MIN
Status: RESOLVED FIXED
Alias: None
Product: realmd
Classification: Unclassified
Component: adcli (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-06 14:21 UTC by Stef Walter
Modified: 2013-09-06 14:55 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Pass correct pointer type to ldap_set_option when setting SSF_MIN (1.17 KB, patch)
2013-09-06 14:35 UTC, Stef Walter
Details | Splinter Review

Description Stef Walter 2013-09-06 14:21:28 UTC
The ldap_set_option documentation states that a pointer to a ber_len_t should be used when setting LDAP_OPT_X_SASL_SSF_MIN. We're incorrectly using int.
Comment 1 Stef Walter 2013-09-06 14:35:08 UTC
Created attachment 85357 [details] [review]
Pass correct pointer type to ldap_set_option when setting SSF_MIN

Failure on some archs where sizeof(int) != sizeof(ber_len_t)
Comment 2 Stef Walter 2013-09-06 14:55:18 UTC
Attachment 85357 [details] pushed as 167b4e9 - Pass correct pointer type to ldap_set_option when setting SSF_MIN


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.