Pass correct pointer type to ldap_set_option when setting SSF_MIN

Failure on some archs where sizeof(int) != sizeof(ber_len_t)

https://bugs.freedesktop.org/show_bug.cgi?id=69038